<resources>
    <string name="app_name">RussellBoard</string>
    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Drawer Menu -->
    <string name="add_category1">Объявления</string>
    <string name="add_my_adds">Мои объявления</string>
    <string name="add_car">Машины</string>
    <string name="add_smartphone">Смартфоны</string>
    <string name="add_appliances">Бытовая техника</string>
    <string name="add_category2">Аккаунт</string>
    <string name="acc_registration">Регестрация</string>
    <string name="acc_sign_in">Вход</string>
    <string name="acc_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_PC">Компьютеры</string>
    <string name="not_reg">Войдите или зарегестрируйтесь!</string>
    <!-- Sign Dialog -->
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегестрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Неудалось зарегестрироваться</string>
    <string name="sign_in_error">Неудалось войти</string>
    <string name="sign_verification_email_error">Неудалось отправить Email для потвержения!</string>
    <string name="sign_verification_done">На вашу почту была отправлена ссылка для подтвержения вашего аккаунта,
        пожалуйста подтвердите ваш аккаунт!</string>
    <string name="email_resset_password_sent">Reset Email was sent!</string>
    <string name="dialog_reset_email_message">Для востановления пароля укажите ваш Email адресс</string>
    <string name="web_client_id" translatable="false">679438181095-gsl02kdi41ojf1di4alhvk88ogt6ollf.apps.googleusercontent.com</string>
    <string name="link_done">Email + Google Account соеденены</string>
    <string name="enter_to_g">У вас уже есть аккаунт с этим Email адресом</string>
    <!-- Edit Activity -->
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="index">Индекс</string>
    <string name="tel">Телефон</string>
    <string name="tel_number_hint">*Номер телефона</string>
    <string name="tel_index_hint">*Почтовый индекс</string>
    <string name="category">Категория</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Укажите цену</string>
    <string name="description">Описание</string>
    <string name="description_hint">*Описание</string>
    <string name="with_send">С отправкой</string>
    <string name="publish">Опубликовать</string>
    <string name="title">Заголовок</string>
    <string name="title_hint">*Введите заголовок</string>
    <!-- AdListItem -->
    <string name="price_desc">Цена:</string>
    <string name="add_my_def">Разное</string>
    <string name="tvAcc_guest">Гость</string>
</resources>